# wasi-examples

boajs/: Cargo.toml  build.sh  interface.did
boajs/src/: lib.rs  wasi.rs
rusqlite/: Cargo.toml  build.sh  dfx.json  interface.did
rusqlite/src/: conv.rs  lib.rs  polyfill.rs  rw.rs  wasi.rs
