[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10"
scopeguard = "1.2.0"
wasi-shim = "0.2.0"
ic-stable-structures = "0.6.7"
stable-fs = "0.7.0"
rusqlite = { version = "0.33.0", features = ["bundled", "wasm32-wasi-vfs"] }
